[package]
name = "addons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
image = "0.24.7"
image_dds = "0.3.0"
notify = "6.1.1"
rfd = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sevenz-rust = "0.5.4"
